changed package.json homepage

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-scroll",
-  "homepage": "https://github.com/Sasurai087/test-portfolio",
+  "homepage": "https://sasurai087.github.io/test-portfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
